--- a/web/PlannerResults.xhtml
+++ b/web/PlannerResults.xhtml
@@ -30,7 +30,7 @@ Copyright © 2017 Andy Sin. All rights reserved.
                                              onclick="#{searchedWeatherController.clearSearchFields()}"/>
                         </th>
                         <th align="center">
-                            <index_header>Activity Forecast</index_header>
+                            <index_header><h:outputText value="#{searchedWeatherController.eventName}"/> Forecast</index_header>
 
                         </th> 
                         <th align="right">
@@ -51,16 +51,120 @@ Copyright © 2017 Andy Sin. All rights reserved.
                 </table>
 
                 <div id="middleMain">
+                    <p:graphicImage url="resources/images/weatherIcons/#{searchedWeatherController.freqIcon}.png"/>
                     <br/>
 
-                    <h:panelGrid columns="2" columnClasses="weatherResults, weatherResults" style="width:100%">
-                        <!-- Columns 1 & 2 -->
-                        <p:graphicImage url="resources/images/weatherIcons/#{searchedWeatherController.result.hourly.icon}.png"/>
+                    <table align="center">
+                        <tr>
+                            <td align="left" class="val">
+                                <h:outputText value="Min. Temp: "/> 
 
-                        <!-- Columns 1 & 2 -->
-                        <h:outputText value="Activity Analysis:" />     
-                    </h:panelGrid>
+                            </td>
+                            <td align="left" class="val" style="font-weight: bold;" >
+                                <h:outputText value="#{searchedWeatherController.minTemp.intValue()}°F"/> 
+
+                            </td>
+                            <td align="left" class="val">
+                                <h:outputText value="Max. Temp: "/> 
+
+                            </td> 
+                            <td align="left" class="val" style="font-weight: bold;">
+                                <h:outputText value="#{searchedWeatherController.maxTemp.intValue()}°F"/> 
+
+                            </td>
+                            <td align="left" class="val">
+                                <h:outputText value="Avg. Temp: "/> 
+
+                            </td>
+                            <td align="left" class="val" style="font-weight: bold;">
+                                <h:outputText value="#{searchedWeatherController.avgTemp.intValue()}°F"/> 
+
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td align="left" class="val">
+                                <h:outputText value="Avg. Wind: "/>
+
+                            </td>
+                            <td align="left" class="val" style="font-weight: bold;">
+                                <h:outputText value="#{searchedWeatherController.avgWind.intValue()} mph"/> 
+
+                            </td>
+                            <td align="left" class="val">
+                                <h:outputText value="Avg. Humidity: "/>
+
+                            </td> 
+                            <td align="left" class="val" style="font-weight: bold;">
+                                <h:outputText value="#{(searchedWeatherController.avgHumidity * 100).intValue()}%"/> 
+
+                            </td>
+                            <td align="left" class="val">
+                                <h:outputText value="Avg. Precip: "/>
+
+                            </td>
+                            <td align="left" class="val" style="font-weight: bold;">
+                                <h:outputText value="#{(searchedWeatherController.avgPrecipChance * 100).intValue()}%"/> 
+
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td align="left" class="val">
+                                <h:outputText value="Min. Cloudcover: "/> 
+
+                            </td>
+                            <td align="left" class="val" style="font-weight: bold;">
+                                <h:outputText value="#{(searchedWeatherController.minCloudCover * 100).intValue()}%"/> 
+
+                            </td>
+                            <td align="left" class="val">
+                                <h:outputText value="Max. Cloudcover: "/> 
+
+                            </td> 
+                            <td align="left" class="val" style="font-weight: bold;">
+                                <h:outputText value="#{(searchedWeatherController.maxCloudCover * 100).intValue()}%"/> 
+
+                            </td>
+                            <td align="left" class="val">
+                                <h:outputText value="Avg. Cloudcover: "/> 
+
+                            </td>
+                            <td align="left" class="val" style="font-weight: bold;">
+                                <h:outputText value="#{(searchedWeatherController.avgCloudCover * 100).intValue()}%"/> 
+
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td align="left" class="val">
+                                <h:outputText value="Min. Visibility: "/> 
+
+                            </td>
+                            <td align="left" class="val" style="font-weight: bold;">
+                                <h:outputText value="#{(searchedWeatherController.minVisibility).intValue()} miles"/> 
+
+                            </td>
+                            <td align="left" class="val">
+                                <h:outputText value="Max. Visibility: "/> 
+
+                            </td> 
+                            <td align="left" class="val" style="font-weight: bold;">
+                                <h:outputText value="#{(searchedWeatherController.maxVisibility).intValue()} miles"/> 
+
+                            </td>
+                            <td align="left" class="val">
+                                <h:outputText value="Avg. Visibility: "/> 
+
+                            </td>
+                            <td align="left" class="val" style="font-weight: bold;">
+                                <h:outputText value="#{(searchedWeatherController.avgVisibility).intValue()} miles"/> 
+
+                            </td>
+                        </tr>
+                    </table>
                 </div>
+
 
             </h:form>
             <br/>
