--- a/web/WeatherForecastResults.xhtml
+++ b/web/WeatherForecastResults.xhtml
@@ -39,19 +39,69 @@ Copyright © 2017 Andy Sin. All rights reserved.
 
                                 <p:commandButton value="Add to Planner" styleClass="resultsButton" onclick="PF('addConfirmDlg').show();" />
 
-                                <p:dialog header="Add to Planner Confirmation" widgetVar="addConfirmDlg" height="200px" width="300px;">
+                                <p:dialog header="Add to Planner Confirmation" widgetVar="addConfirmDlg" height="100%" width="100%;">
                                     <h:form id="confirmForm">
                                         <br/>
 
-                                        <h:outputText value="Activity Name:" />
-                                        <p:spacer style="width: 10px "/>
-                                        <p:inputText id="eventName" required="true" value="#{searchedWeatherController.eventName}"
-                                                     style="font-family: Lato; width:250px; box-shadow: none; font-size: 18px" requiredMessage="Event Name Required." label="eventName">
+                                        <table cellspacing="10">
+                                            <tr>
+                                                <td><index_regular>Event Name:</index_regular></td>
+                                            </tr>
+                                            <tr>
+                                                <td align="left">
+                                                    <p:inputText id="eventTitle" value="#{searchedWeatherController.eventName}" style="font-family: Lato; width:325px; box-shadow: none;" required="true">
+                                                    </p:inputText>
+                                                </td>
 
-                                        </p:inputText>
+                                            </tr>
+                                            <tr>
+                                                <td><index_regular id="endTime">Recurring:</index_regular></td>
+                                            </tr>
+                                            <tr>
+                                                <td align="left">
+                                                    <h:selectOneMenu id="recurrence" value="#{searchedWeatherController.recurring}" style="font-family: Lato; width:325px; box-shadow: none;"
+                                                                     requiredMessage="Select Recurrence of Event">
+                                                        <f:selectItem itemLabel="Select Reccurence of Event" itemValue="" noSelectionOption="true" />
+                                                        <f:selectItem itemLabel="Daily" itemValue="daily"/>
+                                                        <f:selectItem itemLabel="Weekly" itemValue="weekly"/>
+                                                        <f:selectItem itemLabel="1-Time" itemValue="daily"/>
+                                                    </h:selectOneMenu>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td><index_regular id="endTime">Duration:</index_regular></td>
+                                            </tr>
+                                            <tr>
+                                                <td align="left">
+                                                    <h:selectOneMenu id="duration" value="#{searchedWeatherController.duration}"
+                                                                     style="font-family: Lato; width:325px; box-shadow: none;">
+                                                        <f:selectItem itemLabel="Select Recurrence Duration" itemValue="0" noSelectionOption="true" />
+                                                        <f:selectItem itemLabel="Next 1 Week" itemValue="1"/>
+                                                        <f:selectItem itemLabel="Next 2 Weeks" itemValue="2"/>
+                                                        <f:selectItem itemLabel="Next 3 Weeks" itemValue="3"/>
+                                                        <f:selectItem itemLabel="Next 4 Weeks" itemValue="4"/>
+                                                    </h:selectOneMenu>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <div class="latlng" style="display:none;">
+                                            <h:inputText id="searchQueryFieldLat" class="lat"
+                                                         value="#{searchedWeatherController.searchLatitude}">
+                                            </h:inputText>
 
-                                        <p:commandButton styleClass="resultsButton"  value="Add to Planner" actionListener="#{userEventsController.addEvent}" />
+                                            <h:inputText id="searchQueryFieldLng" class="lng"
+                                                         value="#{searchedWeatherController.searchLongitude}">
+                                            </h:inputText>
+                                        </div>
+                                        <br/>
+                                        <div align="center">
+                                            <p:commandButton id="create_event" class="login"
+                                                             style="font-family: Lato; background: #666; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
+                                                             value="CREATE" action="#{userEventsController.addEvent}"
+                                                             >
 
+                                            </p:commandButton>     
+                                        </div>
                                     </h:form>
                                 </p:dialog>
 
