--- a/web/UserHomePage.xhtml
+++ b/web/UserHomePage.xhtml
@@ -58,37 +58,66 @@ Copyright © 2017 Osman Balci. All rights reserved.
             </script>
 
             <div id="topMain" background-color="transparent">
+                <div align="center"><index_header>Welcome!</index_header></div>
+
                 <p:panelGrid id="topGrid" columns="3" layout="grid" styleClass="ui-panelgrid-blank">
 
                     <h:form>
-                        <p:panelGrid id="buttons" columns="1" style="margin:15px 0px">
+                        <p:panelGrid id="buttons" columns="1">
 
-                            <p:commandButton value="Button 1" styleClass="login"/>
-                            <p:commandButton value="Button 2" styleClass="login"/>
-                            <p:commandButton value="Button 3" styleClass="login"/>
-                            <p:commandButton value="Button 4" styleClass="login"/>
-                            <p:commandButton value="Button 5" styleClass="login"/>
+                            <p:commandButton id="create_event" class="login" 
+                                             style="width: 286px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
+                                             value="Create Event"
+                                             >
+
+                            </p:commandButton>  
+
+                            <p:commandButton id="share" class="login"
+                                             style="width: 286px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
+                                             value="Invite Friends" action="#{userEventsController.addEvent}"
+                                             >
+
+                            </p:commandButton>
+
+                            <p:commandButton id="change_password" class="login"
+                                             style="width: 286px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
+                                             value="Change Password" action="#{userEventsController.addEvent}"
+                                             >
+
+                            </p:commandButton>
+
+                            <p:commandButton id="delete_account" class="login"
+                                             style=" width: 286px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
+                                             value="Delete Account" action="#{userEventsController.addEvent}"
+                                             >
+
+                            </p:commandButton>
                         </p:panelGrid>
+
                     </h:form>
 
                     <p:panelGrid id="result" columns="2" style="width:100%;margin:10px 0px;" columnClasses="weatherResults,weatherResults" layout="grid" styleClass="ui-panelgrid-blank">
                         <f:facet name="header">
-                            <h:outputText styleClass="weatherResults" value="#{searchedWeatherController.result.currently.date}"/>
                             <br/>
                             <p:graphicImage rendered="#{searchedWeatherController.result.currently.icon != null}" url="resources/images/weatherIcons/#{searchedWeatherController.result.currently.icon}.png"/>
                         </f:facet>
 
-                        <h:outputText value="Temperatue:" />
-                        <h:outputText value="#{searchedWeatherController.result.currently.temperature.intValue()}°F"/>
+                        <h:outputText value="Outlook:" style="font-size: 30px"/>
+                        <h:outputText value="#{searchedWeatherController.result.currently.summary}" style="font-weight: bold; font-size: 30px"/>
 
-                        <h:outputText value="Precipitation:" />
-                        <h:outputText value="#{searchedWeatherController.result.currently.precipProbability * 100}%"/>
+                        <h:outputText value="Temperature:" style="font-size: 30px"/>
+                        <h:outputText value="#{searchedWeatherController.result.currently.temperature.intValue()}°F" style="font-weight: bold; font-size: 30px"/>
 
-                        <h:outputText value="Humidity:" />
-                        <h:outputText value="#{searchedWeatherController.result.currently.humidity * 100}%"/>
+                        <h:outputText value="Feels Like:" style="font-size: 30px"/>
+                        <h:outputText value="#{(searchedWeatherController.result.currently.apparentTemperature).intValue()}°F" style="font-weight: bold; font-size: 30px"/>
 
-                        <h:outputText value="Wind:" />
-                        <h:outputText value="#{searchedWeatherController.result.currently.windBearing} #{searchedWeatherController.result.currently.windSpeed} mph"/>
+
+                        <h:outputText value="Humidity:" style="font-size: 30px"/>
+                        <h:outputText value="#{(searchedWeatherController.result.currently.humidity * 100).intValue()}%" style="font-weight: bold; font-size: 30px"/>
+
+                        <h:outputText value="Wind:" style="font-size: 30px"/>
+                        <h:outputText value="#{searchedWeatherController.result.currently.windBearing} #{(searchedWeatherController.result.currently.windSpeed).intValue()} mph" style="font-weight: bold; font-size: 30px"/>
+
                     </p:panelGrid>
 
                     <p:carousel value="#{searchedWeatherController.result.alerts}" headerText="Alerts" var="item" itemStyle="text-align:center" responsive="true" style="font-size: 18px" numVisible="1" >
@@ -108,14 +137,15 @@ Copyright © 2017 Osman Balci. All rights reserved.
                 </p:panelGrid>
             </div>
 
-            <div id="bottomMain">
+            <div id="bottomMain" style="background: transparent">
 
-                <h:form id="PlannerDataForm2">
+                <h:form id="PlannerDataForm2" >
+                    <div align="center"><index_header>Upcoming Events</index_header></div>
+
                     <h:panelGrid columns="1" columnClasses="weatherResults">
                         <p:schedule id="weekCal" value="#{scheduleView.eventModel}" draggable="false" view="basicWeek" aspectRatio="5"
-                                    timeFormat="h:mmt" rightHeaderTemplate="" timeZone="GMT-4">
+                                    timeFormat="h:mmt" rightHeaderTemplate="" timeZone="GMT-4" leftHeaderTemplate="" centerHeaderTemplate="">
                             <p:ajax event="eventSelect" listener="#{scheduleView.onEventSelect}"/>
-                            <p:ajax event="dateSelect" listener="#{scheduleView.onDateSelect}" update="fromMain:createEvent" oncomplete="PF('createEventDialog').show();" />   
                         </p:schedule>
 
                         <p:spacer style="height: 10px;"/>
@@ -123,10 +153,6 @@ Copyright © 2017 Osman Balci. All rights reserved.
 
                 </h:form>
             </div>
-
-            <f:subview id="fromMain">
-                <ui:include src="CreateEvent.xhtml"/> 
-            </f:subview>
 
         </ui:define>
 
