--- a/web/UserHomePage.xhtml
+++ b/web/UserHomePage.xhtml
@@ -66,28 +66,23 @@ Copyright © 2017 Osman Balci. All rights reserved.
                         <p:panelGrid id="buttons" columns="1">
 
                             <p:commandButton id="create_event" class="login" 
-                                             style="width: 286px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
-                                             value="Create Event"
-                                             >
-
+                                             style="width: 290px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
+                                             value="Create Event" action="CreateEventPage?faces-redirect=true">
                             </p:commandButton>  
 
                             <p:commandButton id="share" class="login"
-                                             style="width: 286px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
-                                             value="Invite Friends" action="#{userEventsController.addEvent}"
-                                             >
-
+                                             style="width: 290px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
+                                             value="Invite Friends" action="Share?faces-redirect=true">
                             </p:commandButton>
 
                             <p:commandButton id="change_password" class="login"
-                                             style="width: 286px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
+                                             style="width: 290px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
                                              value="Change Password" action="#{userEventsController.addEvent}"
                                              >
-
                             </p:commandButton>
 
                             <p:commandButton id="delete_account" class="login"
-                                             style=" width: 286px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
+                                             style=" width: 290px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
                                              value="Delete Account" action="#{userEventsController.addEvent}"
                                              >
 
