Password change works through user's home page

--- a/web/ForgotPassword.xhtml
+++ b/web/ForgotPassword.xhtml
@@ -17,7 +17,7 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
 
         <!-- Create the content for this page below -->
         <ui:define name="editableContent">
-            <div align="center"> <index_header>Password Recovery</index_header></div>
+            <div align="center"> <index_header>Reset Password</index_header></div>
             <br></br>
 
             <div align="center" style="width:500px; background-color: #FEFEFE; margin:0 auto;">
