--- a/web/UserHomePage.xhtml
+++ b/web/UserHomePage.xhtml
@@ -77,7 +77,7 @@ Copyright © 2017 Osman Balci. All rights reserved.
 
                             <p:commandButton id="change_password" class="login"
                                              style="width: 290px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
-                                             value="Change Password" action="#{userEventsController.addEvent}"
+                                             value="Change Password" action="ForgotPassword?faces-redirect=true"
                                              >
                             </p:commandButton>
 
