Fixed header, index page log in button if signed in, and cleaned up small style points

--- a/web/CreateEvent.xhtml
+++ b/web/CreateEvent.xhtml
@@ -88,7 +88,7 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                         </tr>
                         <tr>
                             <td align="left">
-                                <h:selectOneMenu id="recurrence" value="#{searchedWeatherController.recurring}" style="font-family: Lato; width:325px; box-shadow: none;"
+                                <h:selectOneMenu id="recurrence" value="#{searchedWeatherController.recurring}" style="font-family: Lato; width:335px; box-shadow: none; font-size: 20px"
                                                  requiredMessage="Select Recurrence of Event">
                                     <f:selectItem itemLabel="Select Reccurence of Event" itemValue="" noSelectionOption="true" />
                                     <f:selectItem itemLabel="Daily" itemValue="daily"/>
@@ -103,7 +103,7 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                         <tr>
                             <td align="left">
                                 <h:selectOneMenu id="duration" value="#{searchedWeatherController.duration}"
-                                                 style="font-family: Lato; width:325px; box-shadow: none;">
+                                                 style="font-family: Lato; width:335px; box-shadow: none; font-size: 20px">
                                     <f:selectItem itemLabel="Select Recurrence Duration" itemValue="0" noSelectionOption="true" />
                                     <f:selectItem itemLabel="Next 1 Week" itemValue="1"/>
                                     <f:selectItem itemLabel="Next 2 Weeks" itemValue="2"/>
