--- a/web/UserHomePage.xhtml
+++ b/web/UserHomePage.xhtml
@@ -69,17 +69,17 @@ Copyright © 2017 Osman Balci. All rights reserved.
                                              style="width: 290px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
                                              value="Create Event" action="CreateEventPage?faces-redirect=true">
                             </p:commandButton>  
-
+                            <br/>
                             <p:commandButton id="share" class="login"
                                              style="width: 290px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
                                              value="Invite Friends" action="Share?faces-redirect=true">
                             </p:commandButton>
-
+                            <br/>
                             <p:commandButton id="change_password" class="login"
                                              style="width: 290px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
                                              value="Change Password" action="ForgotPassword?faces-redirect=true">
                             </p:commandButton>
-
+                            <br/>
                             <p:commandButton id="delete_account" class="login"
                                              style=" width: 290px; height: 55px; font-family: Lato; background: #313134; color: white; font-weight: 300; box-shadow: none; text-decoration: none; font-size: 20px; border-style: solid; border-width: 1px;"
                                              value="Delete Account" action="DeleteAccount?faces-redirect=true">
@@ -93,22 +93,62 @@ Copyright © 2017 Osman Balci. All rights reserved.
                             <p:graphicImage rendered="#{searchedWeatherController.result.currently.icon != null}" url="resources/images/weatherIcons/#{searchedWeatherController.result.currently.icon}.png"/>
                         </f:facet>
 
-                        <h:outputText value="Outlook:" style="font-size: 30px"/>
-                        <h:outputText value="#{searchedWeatherController.result.currently.summary}" style="font-weight: bold; font-size: 30px"/>
+                        <div style="width: 600px;">
 
-                        <h:outputText value="Temperature:" style="font-size: 30px"/>
-                        <h:outputText value="#{searchedWeatherController.result.currently.temperature.intValue()}°F" style="font-weight: bold; font-size: 30px"/>
+                            <table align="center" width="100%">
+                                <tr>
+                                    <td align="left" class="hPage">
+                                        <h:outputText value="Outlook: "/> 
 
-                        <h:outputText value="Feels Like:" style="font-size: 30px"/>
-                        <h:outputText value="#{(searchedWeatherController.result.currently.apparentTemperature).intValue()}°F" style="font-weight: bold; font-size: 30px"/>
+                                    </td>
+                                    <td align="left" class="hPage" style="font-weight: bold;" >
+                                        <h:outputText value="#{searchedWeatherController.result.currently.summary}"/> 
 
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td align="left" class="hPage">
+                                        <h:outputText value="Temperature: "/> 
 
-                        <h:outputText value="Humidity:" style="font-size: 30px"/>
-                        <h:outputText value="#{(searchedWeatherController.result.currently.humidity * 100).intValue()}%" style="font-weight: bold; font-size: 30px"/>
+                                    </td> 
+                                    <td align="left" class="hPage" style="font-weight: bold;">
+                                        <h:outputText value="#{searchedWeatherController.result.currently.temperature.intValue()}°F"/> 
 
-                        <h:outputText value="Wind:" style="font-size: 30px"/>
-                        <h:outputText value="#{searchedWeatherController.result.currently.windBearing} #{(searchedWeatherController.result.currently.windSpeed).intValue()} mph" style="font-weight: bold; font-size: 30px"/>
+                                    </td>
+                                </tr>
 
+                                <tr>
+                                    <td align="left" class="hPage">
+                                        <h:outputText value="Feels Like: "/> 
+
+                                    </td>
+                                    <td align="left" class="hPage" style="font-weight: bold;">
+                                        <h:outputText value="#{(searchedWeatherController.result.currently.apparentTemperature).intValue()}°F"/> 
+
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td align="left" class="hPage">
+                                        <h:outputText value="Humidity: "/> 
+
+                                    </td>
+                                    <td align="left" class="hPage" style="font-weight: bold;">
+                                        <h:outputText value="#{(searchedWeatherController.result.currently.humidity * 100).intValue()}%"/> 
+
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td align="left" class="hPage">
+                                        <h:outputText value="Wind: "/> 
+
+                                    </td>
+                                    <td align="left" class="hPage" style="font-weight: bold;">
+                                        <h:outputText value="#{searchedWeatherController.result.currently.windBearing} #{(searchedWeatherController.result.currently.windSpeed).intValue()} mph"/> 
+
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
                     </p:panelGrid>
 
                     <p:carousel value="#{searchedWeatherController.result.alerts}" headerText="Alerts" var="item" itemStyle="text-align:center" responsive="true" style="font-size: 18px" numVisible="1" >
