--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -28,7 +28,8 @@ Copyright © 2017 Andy Sin. All rights reserved.
                 <br></br><br></br>
                 <br></br><br></br>
 
-                <p:button styleClass="index_signup" outcome="CheckWeather" value="TRY IT NOW"/>
+                <p:button styleClass="index_signup" outcome="CheckWeather" value="TRY IT NOW" 
+                          onclick="#{searchedWeatherController.clearSearchFields()}"/>
 
                 <br></br><br></br>
 
